<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_color_white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:background="@color/app_color_white">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="30dp"
            android:layout_height="38dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:src="@drawable/app_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/app_group_call"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/tv_group_call_group_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_group_id"
            android:textColor="@color/app_color_black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_group_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:background="@null"
            android:hint="@string/app_please_input_group_id"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/tv_group_call_group_id"
            android:textColor="@color/app_color_black"
            android:textColorHint="@color/app_color_input_normal"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/tv_group_call_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_user_id_list"
            android:textColor="@color/app_color_black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_user_id_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:background="@null"
            android:hint="@string/app_please_input_user_id_list"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/tv_group_call_user_id"
            android:textColor="@color/app_color_black"
            android:textColorHint="@color/app_color_input_normal"
            android:textSize="16sp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/tuicalling_color_black"
            android:text="@string/app_media_type"/>

        <RadioGroup
            android:id="@+id/rg_media_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_video"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/tuicalling_color_black"
                android:text="@string/app_video_call"
                android:background="@null"
                android:button="@drawable/app_bg_rb_selector"
                android:drawableLeft="@drawable/app_bg_rb_selector"
                android:drawablePadding="5dp"
                android:textSize="16sp"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/rb_audio"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/tuicalling_color_black"
                android:background="@null"
                android:button="@drawable/app_bg_rb_selector"
                android:drawableLeft="@drawable/app_bg_rb_selector"
                android:drawablePadding="5dp"
                android:text="@string/app_audio_call"
                android:textSize="16sp"
                android:gravity="center"
                android:checked="true" />
        </RadioGroup>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_call_setting"
            android:layout_gravity="center_horizontal"
            android:textColor="#0062E3"
            android:textSize="16sp"/>

        <ImageView
            android:layout_marginLeft="9.5dp"
            android:layout_width="5.3dp"
            android:layout_height="9dp"
            android:background="@drawable/app_right"/>

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_join_group_call"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/app_join_group_call"
        android:textColor="#0062E3"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_call"
        android:layout_marginBottom="46dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/app_bg_button"
        android:text="@string/app_start_call"
        android:textAllCaps="false"
        android:textColor="@color/app_color_white"
        android:textSize="16sp"
        android:layout_below="@+id/ll_media_type"/>
</LinearLayout>
