<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="151dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitCenter"
            android:src="@drawable/app_tencent_cloud_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/app_main_title"
            android:textColor="@color/app_color_black"
            android:textSize="28dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_login_logo"
            app:layout_constraintStart_toEndOf="@id/iv_login_logo"
            app:layout_constraintTop_toTopOf="@+id/iv_login_logo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_edit"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="109dp"
        android:background="@drawable/app_bg_edit_text"
        android:padding="14dp"
        app:layout_constraintTop_toBottomOf="@id/cl_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tv_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_user_id"
            android:textColor="@color/app_color_black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/cl_edit"
            app:layout_constraintTop_toTopOf="@id/cl_edit" />

        <EditText
            android:id="@+id/et_userId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@null"
            android:hint="@string/app_hint_user_id"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/app_color_black"
            android:textColorHint="@color/app_color_input_normal"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_phone_number"
            app:layout_constraintStart_toEndOf="@+id/tv_phone_number" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/app_bg_button"
        android:text="@string/app_btn_login"
        android:textColor="@color/app_color_white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_edit" />
</androidx.constraintlayout.widget.ConstraintLayout>
