<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="270dp"
    android:layout_height="142dp"
    android:layout_gravity="center"
    android:background="@drawable/app_bg_edit_text">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/app_dialog_log_out"
        android:textColor="@color/app_color_black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_divide"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="43dp"
        android:background="@color/app_text_color_hint"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:layout_width="1dp"
        android:layout_height="43dp"
        android:background="@color/app_text_color_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_button_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/app_btn_cancel"
            android:textColor="@color/app_color_blue"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/cl_button_panel"
            app:layout_constraintEnd_toStartOf="@+id/btn_positive"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@+id/cl_button_panel" />

        <Button
            android:id="@+id/btn_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/app_btn_confirm"
            android:textColor="@color/app_color_blue"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@id/cl_button_panel"
            app:layout_constraintEnd_toEndOf="@+id/cl_button_panel"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/btn_negative" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
