<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/app_color_white">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/iv_avatar"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/app_avatar"
            app:round="27.5dp" />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_toRightOf="@+id/iv_avatar"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="tateMin"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_nickname"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/iv_avatar"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_user_id_colon"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="#000000"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="151dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:scaleType="fitCenter"
            android:src="@drawable/app_tencent_cloud_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/app_main_title"
            android:textColor="@color/app_color_black"
            android:textSize="28dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_logo"
            app:layout_constraintStart_toEndOf="@id/iv_logo"
            app:layout_constraintTop_toTopOf="@+id/iv_logo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_call"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/app_bg_button"
        android:text="@string/app_1v1_call"
        android:textColor="@color/app_color_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_group_call"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_group_call"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/app_bg_button"
        android:text="@string/app_group_call"
        android:textColor="@color/app_color_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
